# django_books_publisher

./: db.sqlite3  pyproject.toml  requirements.txt
app_root/: asgi.py  settings.py  urls.py  wsgi.py
author/: models.py  repository.py  service.py  tests.py  urls.py
author/api/: serializer.py  views.py
books/: models.py  repository.py  tests.py  urls.py
books/api/: serializer.py  urls.py  views.py
publisher/: serializers.py  urls.py  views.py
