[tool.poetry]
name = "django-books-publisher"
version = "0.1.0"
description = ""
authors = ["sergey.malinovskiy <sergey.malinovskiy@immelman.ru>"]
readme = "README.md"
packages = [{include = "django_books_publisher"}]

[tool.poetry.dependencies]
python = "^3.10"
asgiref="3.6.0"
Django="3.2.18"
djangorestframework="3.14.0"
pytz="2022.7.1"
sqlparse="0.4.3"
attrs = "22.2.0"
build = "0.10.0"
cachecontrol = "0.12.11"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
cleo = "2.0.1"
crashtest = "0.4.1"
cryptography = "40.0.1"
distlib = "0.3.6"
dulwich = "0.21.3"
filelock = "3.10.7"
html5lib = "1.1"
idna = "3.4"
importlib-metadata = "6.1.0"
installer = "0.7.0"
jaraco-classes = "3.2.3"
jeepney = "0.8.0"
jsonschema = "4.17.3"
keyring = "23.13.1"
lockfile = "0.12.2"
more-itertools = "9.1.0"
msgpack = "1.0.5"
packaging = "23.0"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "2.6.2"
poetry = "1.4.1"
poetry-core = "1.5.2"
poetry-plugin-export = "1.3.0"
psycopg2 = "2.9.5"
ptyprocess = "0.7.0"
pycparser = "2.21"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
rapidfuzz = "2.13.7"
requests = "2.28.2"
requests-toolbelt = "0.10.1"
secretstorage = "3.3.3"
shellingham = "1.5.0.post1"
six = "1.16.0"
tomli = "2.0.1"
tomlkit = "0.11.7"
trove-classifiers = "2023.3.9"
urllib3 = "1.26.15"
virtualenv = "20.21.0"
webencodings = "0.5.1"
zipp = "3.15.0"
django-environ = "^0.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
